Ensure progress bar never overlaps content and set sensible default slide duration

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -49,12 +49,20 @@ progress::-ms-fill {
 }
 
 .screen,
-.screen .slides,
 .screen .slide,
 .screen .slide iframe,
 .screen .slide img {
     width: 100%;
     height: 100%;
+}
+
+.screen {
+    display: flex;
+    flex-direction: column;
+}
+
+.screen .slides {
+    flex: 1 1 100%;
 }
 
 .screen .slide{
@@ -68,11 +76,8 @@ progress::-ms-fill {
 }
 
 .screen .iteration-progress {
-    position: absolute;
-    bottom: 0;
-    left: 0;
     width: 100%;
-    height: 1.5vh;
+    flex: 0 0 1.5vh;
 }
 
 .screen .iteration-progress:not([hidden]) {
